--- a/mini-js/randomquotes/index.html
+++ b/mini-js/randomquotes/index.html
@@ -23,12 +23,12 @@
         <div class="content">
             <div class="quote-area">
                 <i class="fa-solid fa-quote-left"></i>
-                 <p class="quote">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero,</p>
+                 <p class="quote">The greatest glory in living lies not in never falling, but in rising every time we fall. </p>
                 <i class="fa-solid fa-quote-right"></i>
             </div>
             <div class="author">
                 <span>__</span>
-                <span class="name">Mary Key Ash</span>
+                <span class="name">Nelson Mandela</span>
             </div>
             <div class="buttons">
                 <div class="features">
